Patched bug with shark tracker globe & panel distribution on mobile

--- a/website/src/styles/globe_views.css
+++ b/website/src/styles/globe_views.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     align-items: stretch; 
     justify-content: center; 
-    height: 30rem;
+    height: 80vh;
     width: 100%;
     gap: 1rem;
     padding: 0 1rem;
